pieces/farpost-dispatch-sf/force-app/main/default/objects/Contact/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>1</scale>
</CustomField>