pieces/farpost-dispatch-sf/force-app/main/default/objects/Contact/fields/Service_Region__c.field-meta.xml
<CustomField>
    <fullName>Service_Region__c</fullName>
    <label>Service Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bancroft</fullName>
            </value>
            <value>
                <fullName>Faraday</fullName>
            </value>
            <value>
                <fullName>Carlow/Mayo</fullName>
            </value>
            <value>
                <fullName>Hastings Highlands</fullName>
            </value>
            <value>
                <fullName>Limerick</fullName>
            </value>
            <value>
                <fullName>Tudor and Cashel</fullName>
            </value>
            <value>
                <fullName>Wollaston</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>